--- a/about.html
+++ b/about.html
@@ -3,25 +3,196 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <meta name = "description" content="">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
+<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+<meta name="msapplication-TileColor" content="#da532c">
+<meta name="theme-color" content="#ffffff">
+    <title>About - HUSET-CPH</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <header class="appbar shadow">
         <img src="img/menu-huset.svg" alt="menu Icon" class="menuicon">
-     <img src="img/okkar-logo.svg" alt="Huset Logo" class="logo">
+    <a href="index.html"><img src="img/okkar-logo.svg" alt="Huset Logo" class="logo"></a>
     </header>
 
-      <aside class="menu hidden">
+     <aside class="menu hidden">
     <ul>
-
+        <li><a href="index.html">Concerts</a></li>
+         <li><a href="about.html">About Huset</a></li>
+        <li><a href="findus.html">Find Us</a></li>
     </ul>
   </aside>
 
     <h1 class="pagetitle">ABOUT HUSET</h1>
 
+    <div class="about">
+
+
+<h2>Unique and original experiences since 1970</h2>
+  <img src="img/huset.jpg" alt="Image of Huset">
+
+ <p>Huset-KBH (or simply ‘Huset’) is Denmark’s first and largest culture house founded in 1970! Today Huset hosts approximately 1,500 annual events, distributed across 5 diverse stages, a cinema, and a board game café. Everything from live music, theatre performances, alternative cinematic films, to spoken word and stand-up comedy can be experienced here, at Huset.
+<br>
+You can check out Huset-KBH on Yelp, Facebook and TripAdvisor. Be sure to rate your experience and write a review about your time at Huset.</p>
+
+<div class="faqgrid">
+    <h1>FAQ</h1>
+    <p>If you have any questions about Huset or the events and festivals taking place at Huset you might be able to find an answer to your question below:</p>
+
+    <section class="info">
+    <h2>AGE LIMIT<span class="arrow"></span></h2>
+<p>Basically, there is no age limit for events in Huset-KBH, but we do follow the legislative rules when it comes to buying alcohol in the bar. We recommend children are accompanied by an adult.</p>
+</section>
+
+<section class="info">
+<h2>WHEN THE EVENTS START<span class="arrow"></span></h2>
+   <p> Check out the times for the specific event under ’Events’ on our website.</p>
+</section>
+
+<section class="info">
+    <h2>LOCATION<span class="arrow"></span></h2>
+<p>You find the main entrance for Huset-KBH at Rådhusstræde 13, 1466 København K. There’s another entrance at Magstræde 14, but you can’t be sure it’s open.</p>
+</section>
+
+<section class="info">
+    <h2>TICKETS<span class="arrow"></span></h2>
+    <p>Tickets for events in Huset-KBH can be purchansed at ticketmaster.com
+<br>
+Check the specific event under ‘Events’ and find the right information about pre-sale. No specifications? Tickets are available at the entrance.
+<br>
+Tickets for our cinema – Husets Biograf – can be reserved by sending an e-mail to husetsbio.reservation@mail.dk with the following information: which event/movie title and how many tickets you want. You will receive a confirmation of reservation. Need help? Write an e-mail to jack.stevenson@mail.dk or call him at +45 20 29 70 13
+<br>
+We do not have an in-house ticket office at Huset-KBH, so you have to buy your ticket online or at the entrance when you get here.
+</p>
+</section>
+
+<section class="info">
+    <h2>COMMUNITIES IN HUSET<span class="arrow"></span></h2>
+<p>In Huset-KBH we have a lot of different organized communities doing all sorts of events: Music, performance art, movie screenings, poetry, stand-up, spoken word – you name it!</p>
+</section>
+
+<section class="info">
+    <h2>COMMUNITY BEHIND HUSET<span class="arrow"></span></h2>
+<p>Foreningen bag Huset-KBH (The Community Behind Huset-KBH) is a gathering of all the cultural communities and other active people in Huset-KBH.
+<br>
+There’s a large diversity and one group differs from another. They participate a great deal in the spirit of Huset-KBH and underlines the values of this historical place:
+<br>
+History, unique, original, diverse, friction, playful, urban, mutable, rebellion and anarchy
+<br>
+The community’s most important function is to be exacting for other creative communities to participate in creating a creative, fun and interesting house.
+<br>
+Another important task is to function as a strategic partner for the administration and try to improve the different facilities such as tech, inventory, and awareness about the people in Huset-KBH and Huset-KBH in general mainly through funding.
+<br>
+Finally, the community Foreningen Bag Huset-KBH is a unifying social organ for all the different players and communities in Huset-KBH.
+<br>
+    </p>
+    </section>
+
+<section class="info">
+    <h2>VOLUNTEERS<span class="arrow"></span></h2>
+<p>A lot of the activities in Huset-KBH are based on the work and help of our volunteers. The main part of the different communities and organizers of events in Huset-KBH are volunteers. Since the summer of 2013 Huset-KBH has expanded the group of volunteers. It now consists of 100 Danish and international volunteers. They work and run different events: booking, sound, lighting, bartending, PR and band care.</p>
+</section>
+
+
+
+<section class="info">
+    <h2>ACCESSIBILITY<span class="arrow"></span></h2>
+<p>Huset-KBH works to be accessible for everyone. We believe that accessibility is more than just physical frameworks. The accessibility is the good service and communication, to ensure that we go together while experiencing the cultural life together.
+<br>
+Everyone, despite gender, religion, sexual orientation and handicap, are welcome in Huset-KBH.</p>
+</section>
+
+<section class="info">
+    <h2>FOR THE DISABLED<span class="arrow"></span></h2>
+<p>Huset-KBH has a freight elevator that gives access to Bastard Café, Spisehuset Fair, Stardust, Husets Biograf, Bastarden, Musikcaféen and STAGE. It can be a bit difficult to get to other areas of the house. Feel free to ask our staff for assistance!
+<br>
+If you are a large group of disabled it would be a great help for us if you could contact us in advance to make sure that we can help you out in the best way possible. See pictures of Huset’s entrance, scenes and parking via link
+    </p>
+</section>
+
+    <section class="info">
+<h2>WARDROBE<span class="arrow"></span></h2>
+<p>Basically, we don’t have a wardrobe here in Huset-KBH, but at some events, there might be one. It’s always your own responsibility if you put your effects in the wardrobe. In Bastard Café and Musikcaféen you will find lockers where you can put your stuff. Keep an eye on your stuff – always!
+    </p>
+        </section>
+
+<section class="info">
+<h2>FORGOT SOMETHING?<span class="arrow"></span></h2>
+<p>Effects forgotten in Huset-KBH will be kept for two weeks and can be collected at our office Monday through Friday between 11 and 15 o’clock. Feel free to call us in advance +45 21 51 21 51.</p>
+</section>
+
+<section class="info">
+<h2>CONTACT<span class="arrow"></span></h2>
+<p>Our office is open Mondays through Fridays between 11 and 15 o’clock. You can contact us by phone +45 21 51 21 51.</p>
+</section>
+
+<section class="info">
+<h2>NO DRUGS POLICY<span class="arrow"></span></h2>
+<p>Despite our rather colorful past we do not under any circumstances tolerate any kinds of drugs in Huset-KBH. Any violations will lead to eviction from our property and will be reported to the Danish police.</p>
+</section>
+
+<section class="info">
+<h2>SEATING<span class="arrow"></span></h2>
+<p>At some events, you might be able to reserve a specific seat, but for the main part, there’s free seating. It’s always a good idea to be here in good time before the show.</p>
+</section>
+
+
+<section class="info">
+<h2>PARKING<span class="arrow"></span></h2>
+<p>It’s pretty hard to find a parking space in the center of Copenhagen, and Huset-KBH cannot provide parking. We recommend that you walk or get here by public transportation.
+<br>
+    You can park your bike just across from Huset-KBH at Vandkunsten, and we recommend that you park there instead of blocking the sidewalk in front of Huset-KBH. For security reasons, you’re not allowed to park your bike in our yard. Please, respect this.</p>
+</section>
+
+<section class="info">
+    <h2>POSTERS<span class="arrow"></span></h2>
+<p>If you want to put up a poster for an event outside Huset-KBH you can put in on a specific pillar in our foyer. Anywhere else is off limits for anyone outside the administration of Huset-KBH.
+<br>
+It’s strictly forbidden for anyone outside the administration of Huset-KBH to take down or cover the posters of others. It is also forbidden to put up unauthorized posters in the windows or on the walls.
+<br>
+The administration of Huset-KBH can at any time move or remove posters which have been put up without permission.
+    </p>
+</section>
+<section class="info">
+<h2>SMOKING<span class="arrow"></span></h2>
+<p>Smoking is not allowed inside. If you need to smoke you must go outside in the yard.</p>
+</section>
+
+<section class="info">
+<h2>RENT HUSET-KBH<span class="arrow"></span></h2>
+    <p>It is possible to rent Huset-KBH for events – read more under the menu ‘LEASING’.</p>
+</section>
+
+<section class="info">
+<h2>SOLD OUT EVENTS<span class="arrow"></span></h2>
+<p>When an event in Huset-KBH is marked with ’udsolgt’ or ’sold out’ it means that it is in fact sold out: There are no more tickets.</p>
+</section>
+
+<section class="info">
+<h2>OPENING HOURS /DAY<span class="arrow"></span></h2>
+    <p>Huset administration office is open Mon-Fri: 11.00-15.00</p>
+</section>
+
+<section class="info">
+    <h2>OPENING HOURS /NIGHT<span class="arrow"></span></h2>
+<p>Husets opening hours of our different venues can change depending on the specific events, but as a rule of thumb:
+<br>
+Sunday-Thursday: 20.00-01.00
+<br>
+Friday-Saturday: 20.00-02.00
+<p/>
+    </section>
+    </div>
+        </div>
+    <footer>&copy; ELÍSABET RÓS VALSDÓTTIR</footer>
 <script src="js/menu.js"></script>
-<script src=""></script>
+<script src="js/about.js"></script>
+
 </body>
 </html>
