--- a/subpage.html
+++ b/subpage.html
@@ -3,39 +3,49 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+<meta name = "description" content="">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
+<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+<meta name="msapplication-TileColor" content="#da532c">
+<meta name="theme-color" content="#ffffff">
+    <title>Concerts - HUSET-CPH</title>
      <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
      <header class="appbar shadow">
         <img src="img/menu-huset.svg" alt="menu Icon" class="menuicon">
-     <img src="img/okkar-logo.svg" alt="Huset Logo" class="logo">
+     <a href="index.html"><img src="img/okkar-logo.svg" alt="Huset Logo" class="logo"></a>
     </header>
 
       <aside class="menu hidden">
     <ul>
-        <li><a href="">Concerts</a></li>
+        <li><a href="index.html">Concerts</a></li>
          <li><a href="about.html">About Huset</a></li>
-        <li><a href="find-us.html">Find Us</a></li>
-        <li><a href="faq.html">FAQ</a></li>
+        <li><a href="findus.html">Find Us</a></li>
     </ul>
   </aside>
-
    <h1>Concerts</h1>
     <section id="singleCon">
-        <h1 class="title">Title</h1>
-         <img src="" alt="">
+        <a href="index.html">Back to Concerts</a>
+        <h1 class="subtitle">Title</h1>
         <div class="grid">
-        <h3 class="genre">Genre</h3>
-        <h3 class="price">Price</h3>
+         <p class="date">Date</p>
+            <p class="genre">Genre</p>
+         <img src="" alt="Image of the band" class="concertimg">
+        <h2 class="venue">Venue</h2>
+        <h2 class="price">Price</h2>
         <p class="presale">Presale price: <span></span> + fees</p>
             </div>
         <p class="descript">Description</p>
+
+
     </section>
 
-
-
+<footer>&copy; ELÍSABET RÓS VALSDÓTTIR</footer>
   <script src="js/subpage.js"></script>
   <script src="js/menu.js"></script>
 
