loader on all pages

--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
 </head>
 
 <body>
+    <div class="container hiddenloader">
+        <div class="dot" id="d1"></div>
+        <div class="dot" id="d2"></div>
+        <div class="dot" id="d3"></div>
+    </div>
     <header class="appbar shadow">
         <img src="img/menu-huset.svg" alt="menu Icon" class="menuicon">
      <a href="index.html"><img src="img/okkar-logo.svg" alt="Huset Logo" class="logo"></a>
@@ -29,7 +34,8 @@
         <li><a href="findus.html">Find Us</a></li>
     </ul>
   </aside>
-      <h1 class="pagetitle">CONSERTS</h1>
+    <div class="page hiddenloader">
+      <h1 class="pagetitle">CONCERTS</h1>
 
     <div class="buttons">
     <button class="showbtn">GENRE</button>
@@ -58,9 +64,10 @@
          <p><a class="readmore" href="subpage.html?id=">Read more</a></p>
         </article>
         </template>
-
+    </div>
 <footer>&copy; ELÍSABET RÓS VALSDÓTTIR</footer>
-<script src="js/script.js"></script>
     <script src="js/menu.js"></script>
+<script src="js/script.js"></script>
+
 </body>
 </html>
