--- a/subpage.html
+++ b/subpage.html
@@ -16,6 +16,11 @@
 </head>
 
 <body>
+     <div class="container hiddenloader">
+        <div class="dot" id="d1"></div>
+        <div class="dot" id="d2"></div>
+        <div class="dot" id="d3"></div>
+    </div>
      <header class="appbar shadow">
         <img src="img/menu-huset.svg" alt="menu Icon" class="menuicon">
      <a href="index.html"><img src="img/okkar-logo.svg" alt="Huset Logo" class="logo"></a>
@@ -28,7 +33,8 @@
         <li><a href="findus.html">Find Us</a></li>
     </ul>
   </aside>
-   <h1>Concerts</h1>
+    <h1>Concerts</h1>
+       <div class="page hiddenloader">
     <section id="singleCon">
         <a href="index.html">Back to Concerts</a>
         <h1 class="subtitle">Title</h1>
@@ -44,10 +50,10 @@
 
 
     </section>
-
+</div>
 <footer>&copy; ELÍSABET RÓS VALSDÓTTIR</footer>
+     <script src="js/menu.js"></script>
   <script src="js/subpage.js"></script>
-  <script src="js/menu.js"></script>
 
 </body>
 </html>
