more loader (but only working on concerts and subpage)

--- a/about.html
+++ b/about.html
@@ -16,6 +16,11 @@
 </head>
 
 <body>
+    <div class="container hiddenloader">
+        <div class="dot" id="d1"></div>
+        <div class="dot" id="d2"></div>
+        <div class="dot" id="d3"></div>
+    </div>
     <header class="appbar shadow">
         <img src="img/menu-huset.svg" alt="menu Icon" class="menuicon">
     <a href="index.html"><img src="img/okkar-logo.svg" alt="Huset Logo" class="logo"></a>
@@ -28,7 +33,7 @@
         <li><a href="findus.html">Find Us</a></li>
     </ul>
   </aside>
-
+<div class="page">
     <h1 class="pagetitle">ABOUT HUSET</h1>
 
     <div class="about">
@@ -190,7 +195,9 @@ Friday-Saturday: 20.00-02.00
     </section>
     </div>
         </div>
+    </div>
     <footer>&copy; ELÍSABET RÓS VALSDÓTTIR</footer>
+    <script src="js/loader.js"></script>
 <script src="js/menu.js"></script>
 <script src="js/about.js"></script>
 
