loader working, filters working

--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
     <div class="about">
 
 
-<h2>Unique and original experiences since 1970</h2>
+<h2 class="title">Unique and original experiences since 1970</h2>
   <img src="img/huset.jpg" alt="Image of Huset">
 
  <p>Huset-KBH (or simply ‘Huset’) is Denmark’s first and largest culture house founded in 1970! Today Huset hosts approximately 1,500 annual events, distributed across 5 diverse stages, a cinema, and a board game café. Everything from live music, theatre performances, alternative cinematic films, to spoken word and stand-up comedy can be experienced here, at Huset.
