--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
       <h1 class="pagetitle">CONCERTS</h1>
 
     <div class="buttons">
-    <button class="showbtn">GENRE</button>
-    <button class="showbtnt">VENUE</button>
+        <div class="showbtn">GENRE<span class="arrow"></span></div>
+        <div class="showbtnt">VENUE<span class="arrow"></span></div>
     <div class="genres">
     <ul></ul>
     </div>
